<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.supercynical.currencyconversionapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainTitleText"
        android:id="@+id/titleTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:textSize="25sp"
        android:textIsSelectable="false" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/baseAmount"
        android:hint="@string/baseAmountHintText"
        android:gravity="center"
        android:layout_below="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Convert To:"
        android:id="@+id/convertText"
        android:layout_below="@+id/baseAmount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/convertButtonText"
        android:id="@+id/convertButton"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/convertText"
        android:id="@+id/radioGroup"
        android:layout_above="@+id/convertButton"
        android:layout_alignStart="@+id/convertButton"
        android:layout_alignEnd="@+id/convertButton">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euroButtonText"
            android:id="@+id/euroRadioButton"
            android:layout_gravity="left|center_horizontal"
            android:checked="false"
            android:layout_marginBottom="5dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pesoButtonText"
            android:id="@+id/pesosRadioButton"
            android:layout_gravity="left|center_horizontal"
            android:checked="false"
            android:layout_marginBottom="5dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canadaButtonText"
            android:id="@+id/canadaRadioButton"
            android:layout_gravity="left|center_horizontal"
            android:checked="false"
            android:layout_marginBottom="5dp" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/convertedAmountTitleText"
        android:id="@+id/convertedAmountTitleText"
        android:layout_marginBottom="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/titleTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/convertedAmount"
        android:layout_alignTop="@+id/convertedAmountTitleText"
        android:layout_alignEnd="@+id/titleTextView" />
</RelativeLayout>
